CCLE-7882 - Fix front page display.
Added case when there is no session overlap for summer.

phpunit test in progress.

Updated class name.

moved parsed_weeksdisplay function to lib file for accessibility.

Added all possible test cases for phpunit file.

Added missing period at the end of commented line.

Replaced the parsed_weeks_display function call appropriately for frontpage.

--- a/theme/uclashared/style/frontpage.css
+++ b/theme/uclashared/style/frontpage.css
@@ -337,7 +337,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 #greeting-header-text {
-  font-size: 6vw;
+  font-size: 3vw;
   color: white;
 }
 
